[BUG-LINUXTWUI-1243] : footer button - two buttons are overlapped.
It's was only visible, when emulate screen was not set

--- a/tau/src/css/profile/mobile/changeable/common/jquery.mobile.theme.less
+++ b/tau/src/css/profile/mobile/changeable/common/jquery.mobile.theme.less
@@ -698,10 +698,7 @@ a.ui-link-inherit {
 		}
 	}
 
-	> [data-role="button"] {
-		position : absolute;
-		top : 0;
-	}
+
 }
 
 }
